<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SozySync</string>
    <string name="addrhead">FTP Server Address </string>
    <string name="userhead">Login </string>
    <string name="passwdhead">Password</string>
    <string name="uploadbutton">Upload</string>
    <string name="download">Download</string>
    <string name="settingsbutton">Settings</string>
    <string name="savebutton">Save</string>
    <string name="pathtohome">/storage/emulated/0/</string>
    <string name="localpathhead">Local path: </string>
    <string name="remotepathhead">Remote path: </string>
    <string name="unknownhostexception">Unknown/Unreachable host: </string>
    <string name="connectexception">Connection failed</string>
    <string name="saved">Saved</string>
    <string name="inputlocalpath">Input Local Path</string>
    <string name="inputremotepath">Input Remote Path</string>
    <string name="connectionclosedexception">Check Login And Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="wantopen">Do you want to choose</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filemanager">File Manager</string>
    <string name="rootpermission">Permission denied</string>
    <string name="profiles">Profiles</string>
    <string name="choosepath">Choose path</string>
    <string name="addprofile">Add Profile</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="browse">Browse</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="wrongdestination">Destination can not be a file</string>
    <string name="developedby">Developed by Andrew Nadraliev</string>
    <string name="version">Version pre-alpha</string>
    <string name="nameExists">This name already exists</string>
    <string name="emptyField">Fields can not be empty</string>
    <string name="delete">Delete</string>
    <string name="empty">Empty</string>
    <string name="start">Start</string>
    <string name="info">Info</string>
    <string name="typehead">Type </string>
    <string name="about">About</string>
    <string name="edit">Edit profile</string>
    <string name="synccomplete">Sync completed</string>
    <string name="showprofile">Show profile</string>
    <string name="syncstarted">Sync started</string>
    <string name="syncing">Syncing</string>
    <string name="is">is</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="day_info">Day: </string>
    <string name="time_info">Time:</string>
    <string name="path">Path</string>
    <string name="destination">Destination</string>
    <string-array name="navigationdrawer">
        <item>Profiles</item>
        <item>Processes</item>
    </string-array>
    <string-array name="daysofweek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
</resources>