<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/white">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="50dp" android:background="@color/purple">
        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:background="@drawable/ic_return"
                android:onClick="actionbarback"/>
        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:text="@string/settingsbutton" android:textSize="22dp" android:layout_gravity="center_vertical"
                  android:gravity="center_vertical" android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addrhead"
            android:id="@+id/addrhead"
            android:textColor="@color/black"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/addredit" android:textColor="@color/black"
              style="@android:style/Widget.DeviceDefault.Light.EditText" android:inputType="text"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/userhead"
              android:text="@string/userhead" android:textColor="@color/black"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/useredit" android:textColor="@color/black" android:inputType="text"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/passwdhead"
              android:text="@string/passwdhead" android:textColor="@color/black"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/passwdedit" android:textColor="@color/black" android:inputType="textPassword"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/savebutton"
            android:text="@string/savebutton" android:textColor="@color/black"
            android:textSize="18sp" android:background="@color/white"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"/>
</LinearLayout>