<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:visibility="visible">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:background="@color/white" android:baselineAligned="false">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/localpathhead"
                android:background="@color/white"
                android:textColor="@color/black"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/localpathold" style="@android:style/Widget.DeviceDefault.Light.EditText"
                android:inputType="text" android:textColor="@color/black"
                android:background="@color/white"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/remotepathhead"
                android:background="@color/white"
                android:textColor="@color/black"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/remotepathold"
                android:textColor="@color/black" android:inputType="text"
                android:background="@color/white"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@color/white">
            <Button android:layout_width="182dp" android:layout_height="wrap_content"
                    android:id="@+id/uploadbutton"
                    android:text="@string/uploadbutton" android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    />
        </LinearLayout>
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/profilesbutton"
                android:onClick="profiles"
                android:text="@string/profiles"
                android:textColor="@color/black"
                android:background="@color/white"
                />
    </LinearLayout>
</RelativeLayout>
