<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="50dp" android:background="@color/purple">
        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:background="@drawable/ic_return"
                android:onClick="actionbarback"/>
        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:text="@string/addprofile" android:textSize="22dp" android:layout_gravity="center_vertical"
                  android:gravity="center_vertical" android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="end" android:layout_weight="0">
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/local"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="left" android:layout_gravity="left" android:layout_weight="10"
                android:paddingLeft="5dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/remote"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal" android:paddingRight="5dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:gravity="end" android:layout_weight="0">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="chooselocalpath" android:layout_weight="2" android:paddingLeft="5dp">
            <ImageView android:layout_width="40dp" android:layout_height="40dp"
                    android:background="@drawable/ic_folder"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:textColor="@color/grey"
                    android:text="@string/browse"
                    android:textSize="15sp"
                    android:gravity="center" android:id="@+id/localpath"/>
        </LinearLayout>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/ic_rightarrow"/>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:onClick="chooseremotepath" android:layout_weight="2" android:layout_gravity="right"
                      android:gravity="right" android:paddingRight="5dp">
            <ImageView android:layout_width="40dp" android:layout_height="40dp"
                       android:background="@drawable/ic_folder" android:layout_weight="0"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:textColor="@color/grey"
                      android:text="@string/browse"
                      android:textSize="15sp"
                      android:gravity="center" android:layout_gravity="right" android:layout_weight="0"
                      android:id="@+id/remotepath"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>